Select the activated-composition backend from the base's qualification
ModelJars.loadActivatedToolRuntime hard-coded selectQualification(base,
ModelBackend.JAVA), so a base qualified on rust-ffm only could not be opened
as a hybrid at all. The Granite 4.1 3B Q4_K_M base is exactly that case, and
the public API threw

  ModelJar org.modeljars.huggingface:ibm-granite.granite-4.1-3b-gguf.q4_k_m:
  4.1.0-q4_k_m.2 has no qualified pure-java execution

Qualifying that base on pure Java is not honestly achievable: pure Java
measures roughly 6x slower than the Rust FFM backend on the same cases, far
below the RAG performance floor the base was qualified against. So the
activated path now selects a backend the way the non-activated path does,
through ModelLoadOptions.backend():

  * ModelBackend.AUTO prefers pure Java when the base is qualified on it and
    otherwise uses the base's qualified native backend. It never falls back
    to an unqualified backend. This keeps the pure-Java-only bases the
    activated path used to serve on exactly the backend they had.
  * An explicit ModelBackend.JAVA or NATIVE must be qualified for the base.
  * Component evidence now records the backend it binds
    (componentQualification.<id>.backend, defaulting to pure-java so every
    already-published resource keeps its meaning). If it disagrees with the
    selected base backend, or the component marker does not advertise that
    backend, the open fails closed before anything is installed, naming the
    component, the base and both backends.
  * Backend-selection failures name the model, the requested backend and the
    backends that are actually qualified.

ActivatedBackendLoader now takes the selected backend and dispatches to
PureJavaBackend.loadActivatedAdapter or RustFfmBackend.loadActivatedAdapter,
and the rust-ffm path goes through the same requireNativeAccess gate as
ordinary native loading.

verifyCatalog additionally requires a component's marker to advertise the
backend its